--- a/app/globals.css
+++ b/app/globals.css
@@ -1,11 +1,8 @@
 /* Roboto Font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap');
 
-/* Alegreya Sans Font */
+/* Alegreya Font */
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');
-
-/* Alegreya Sans Font */
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap');
 
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
@@ -18,7 +15,8 @@
   --bi-blue: #C0D6D8FF; 
 
   --craton-gey: #746164FF;
-  --stone-blue: #083344;
+  --foreground: #083344;
+  --foreground-highlight: #C0D6D8FF;
 }
 
 @layer base {
@@ -29,14 +27,18 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background: #2A3128; /* Couleur de fond */
+    --foreground: #F9F0EEFF; /* Couleur du texte */
+    --foreground-highlight: #D67D3EFF; /* Exemple de couleur */
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--stone-blue);
+  background: var(--background); 
+  color: var(--foreground);
   font-family: 'Roboto Flex', sans-serif;
+}
+
+.foreground-highlight {
+  color: var(--foreground-highlight);
 }
